@@ -70,6 +70,7 @@
 #  9-Dec-2019 jdw Add placeholders for uniprot_core
 # 14-Dec-2019 jdw Reorganize repository_holdings collections
 # 16-Dec-2019 jdw Include site remote details
+# 16-Dec-2019 jdw update brief descriptions
 #
 # ExDB configuration file example
 ---
@@ -1503,11 +1504,11 @@ document_helper_configuration:
               VERSION: 5.1.0
         pdbx_core:
             - NAME: pdbx_core_entry
-              VERSION: 7.0.3
+              VERSION: 7.0.5
             - NAME: pdbx_core_assembly
               VERSION: 7.0.1
             - NAME: pdbx_core_polymer_entity
-              VERSION: 7.0.2
+              VERSION: 7.0.4
             - NAME: pdbx_core_nonpolymer_entity
               VERSION: 7.0.2
             - NAME: pdbx_core_branched_entity
@@ -2834,9 +2835,12 @@ document_helper_configuration:
         - ATTRIBUTE_NAME: struct.title
           TYPE: brief
           TEXT: Structure Title
+        - ATTRIBUTE_NAME: struct.pdbx_descriptor
+          TYPE: brief
+          TEXT: A description of the structure entry
         - ATTRIBUTE_NAME: rcsb_polymer_entity.pdbx_description
           TYPE: brief
-          TEXT: Structure Description
+          TEXT: A description of the polymer entity
         - ATTRIBUTE_NAME: rcsb_polymer_entity.rcsb_macromolecular_names_combined_name
           TYPE: brief
           TEXT: Macromolecule Name
@@ -3288,13 +3292,15 @@ document_helper_configuration:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
           - audit_author.identifier_ORCID
+          - audit_author.name
           - citation_author.identifier_ORCID
           - citation.id
           - citation.journal_abbrev
-          - citation.rcsb_journal_abbrev
           - citation.journal_id_ASTM
           - citation.journal_id_ISSN
           - citation.pdbx_database_id_DOI
+          - citation.rcsb_authors
+          - citation.rcsb_journal_abbrev
           - citation.unpublished_flag
           - diffrn_detector.type
           - diffrn_source.pdbx_synchrotron_beamline
@@ -3334,9 +3340,9 @@ document_helper_configuration:
           - pdbx_SG_project.full_name_of_center
           - pdbx_SG_project.initial_of_center
           - pdbx_SG_project.project_name
+          - rcsb_entry_container_identifiers.emdb_ids
           - rcsb_entry_container_identifiers.entry_id
           - rcsb_entry_container_identifiers.rcsb_id
-          - rcsb_entry_container_identifiers.emdb_ids
           - rcsb_entry_container_identifiers.related_emdb_ids
           - rcsb_entry_info.experimental_method
           - rcsb_entry_info.na_polymer_entity_types
